--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hiruni Kegalle
-#logo: /assets/img/headshot.png
+logo: /assets/img/Hiruni.png
 #description: text below image
 #show_downloads: False
 theme: jekyll-theme-minimal
