--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hiruni Kegalle
 logo: /assets/img/Hiruni.png
-#description: text below image
-#show_downloads: False
+description: PhD Candidate, RMIT University, Australia.
+show_downloads: false
 theme: jekyll-theme-minimal
