--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,7 @@ show_downloads: false
 theme: jekyll-theme-minimal
 github:
   is_project_page: false
+layout: page
+title: "PAGE-TITLE"
+permalink: /about/contact/
+
