--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ show_downloads: false
 theme: jekyll-theme-minimal
 github:
   is_project_page: false
-
-
+layout: publications
+permalink: /publications
