--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,4 @@ permalink: /publications
 markdown: kramdown
 kmarkdown:
   input: GFM
- header_pages:
-   - publications.md
+ header_pages: publications.md
