--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Hiruni Kegalle
 logo: /assets/img/Hiruni-round.png
-description: PhD Candidate, RMIT University, Australia.
+description: PhD Candidate, RMIT University.
   <br><br>
   <a href="https://www.linkedin.com/in/jacob-lundeen-b49b8390/"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="30" height="30"> </a> 
   <br><br>
-  <a href="https://scholar.google.com.au/citations?user=3WvHX3QAAAAJ&hl=en">  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Google_Scholar_logo.png" alt="Google Scholar" width="30" height="30"> </a>
+  <a href="https://scholar.google.com.au/citations?user=3WvHX3QAAAAJ&hl=en">  <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="30" height="30"> </a>
 show_downloads: false
 theme: jekyll-theme-minimal
 github:
