--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ navigation:
   - title: "Publications"
     url: "/publications/"
   - title: "Work Experience"
-    url: "/work/"
+    url: "/workexperience/"
