--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ theme: jekyll-theme-minimal
 github:
   is_project_page: false
 navigation:
-  - title: "HiruniK"
+  - title: "Home"
     url: "/"
   - title: "Publications"
     url: "/publications/"
