--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ logo: /assets/img/Hiruni-round.png
 description: PhD Candidate, RMIT University.
   <br><br>
   <a href="https://www.linkedin.com/in/hiruni-kegalle/"> <img class="icon-img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="30" height="30"> </a> 
-  <a href="https://scholar.google.com.au/citations?user=3WvHX3QAAAAJ&hl=en">  <img class="icon-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="30" height="30"> </a>
-  <a href="hirunikegalle@gmail.com"> <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" width="30" style="padding: 5px;"> </a>
+  <a href="https://scholar.google.com.au/scholar?hl=en&as_sdt=0%2C5&q=hiruni+kegalle&btnG=">  <img class="icon-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="30" height="30"> </a>
+  <a href="hirunikegalle@gmail.com"> <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" width="30"> </a>
 show_downloads: false
 theme: jekyll-theme-minimal
 github:
