--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title: Hiruni Kegalle
 logo: /assets/img/Hiruni-round.png
 description: PhD Candidate, RMIT University.
   <br><br>
-  <a href="https://www.linkedin.com/in/hiruni-kegalle/"> <img class="icon-img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="30" height="30"> </a> 
-  <a href="https://scholar.google.com.au/scholar?hl=en&as_sdt=0%2C5&q=hiruni+kegalle&btnG=">  <img class="icon-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="30" height="30"> </a>
+  <a href="https://www.linkedin.com/in/hiruni-kegalle/"> <img class="icon-img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="30" height="30" style="padding:5px;"> </a> 
+  <a href="https://scholar.google.com.au/scholar?hl=en&as_sdt=0%2C5&q=hiruni+kegalle&btnG=">  <img class="icon-img" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="30" height="30" style="padding:5px;"> </a>
   <a href="https://github.com/HiruniNuwanthika" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="30" style="padding:5px;"> </a>
-  <a href="hirunikegalle@gmail.com"> <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email" width="30"> </a>
+  <a href="hirunikegalle@gmail.com"> <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email" width="30" style="padding:5px;"> </a>
 show_downloads: false
 theme: jekyll-theme-minimal
 github:
