--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hiruni Kegalle
+title: Hiruni Kegalle Hiruni | Data Scientist & Researcher
 logo: /assets/img/Hiruni-round.png
 description: PhD Candidate, RMIT University.
   <br><br>
